fix layout problems in various browsers (#1721)

--- a/core-bundle/src/Resources/contao/themes/flexible/basic.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/basic.css
@@ -255,6 +255,7 @@ fieldset.checkbox_container,fieldset.radio_container {
 	width:19%;
 }
 .tl_text,.tl_text_2,.tl_text_3,.tl_text_4,.tl_textarea,.tl_text_unit,.tl_text_trbl,.tl_text_interval {
+	height:29px;
 	margin:3px 0;
 	box-sizing:border-box;
 	padding:5px 6px 6px;
@@ -337,6 +338,7 @@ select[multiple] {
 	width:50%;
 }
 .tl_select,.tl_mselect,.tl_select_column,.tl_select_unit,.tl_select_interval {
+	height:29px;
 	margin:2px 0;
 	box-sizing:border-box;
 	border:1px solid #aaa;
@@ -521,7 +523,7 @@ a.tl_submit {
 	margin:17px 15px;
 }
 .cbx {
-	min-height:46px;
+	min-height:47px;
 }
 .subpal {
 	clear:both;
